# TarotTeller

./: .gitignore  LICENSE.md  README.md  package-lock.json  pyproject.toml
ios-app/TarotTellerIOS/TarotTellerIOS/: Info.plist  TarotTellerIOSApp.swift
ios-app/TarotTellerIOS/TarotTellerIOS.xcodeproj/: project.pbxproj
ios-app/TarotTellerIOS/TarotTellerIOS/Models/: TarotDeck.swift
ios/TarotTellerIOS/: project.pbxproj
ios/TarotTellerIOS/TarotTellerIOS/: Info.plist  TarotTellerIOSApp.swift
release/: IMAGE_SPECS.md  play_upload_checklist.md  privacy.md  store_listing.md
scripts/: verify_card_assets.py
src/tarotteller/: __init__.py  cli.py  data.py  deck.py  engine.py  experiences.py  gui.py  spreads.py
src/tarotteller.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/tarotteller/core/: __init__.py  ai_engine.py  card_images.py  engine.py  spreads.py
src/tarotteller/interfaces/: __init__.py  cli.py  gui.py
tarot_teller/: __init__.py  __main__.py  astrology.py  native_american.py  numerology.py  reading.py  tarot.py  user.py
tarot_teller_android/: LICENSE.md  README.md  README_RELEASE.md  buildozer.spec  requirements.txt
tarot_teller_android/app/: main.py
tarot_teller_android/app/engine/: __init__.py  deck.py  reading.py  rng.py  storage.py
tarot_teller_android/app/tests/: test_reading_engine.py
tarot_teller_android/app/ui/: screens.kv
tests/: test_ai_engine.py  test_astrology.py  test_card_images.py  test_cli.py  test_context.py  test_deck.py  test_engine.py  test_experiences.py  test_knowledge.py  test_native_american.py  test_numerology.py  test_reading.py  test_spreads.py  test_tarot.py
(+10 files in other folders)
