[build-system]
requires = ["setuptools>=67"]
build-backend = "setuptools.build_meta"

[project]
name = "tarot-teller"
version = "0.1.0"
description = "Interactive command-line experience that synthesizes astrology, numerology, and tarot insights."
authors = [{name = "TarotTeller Contributors"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
