[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tarotteller"
version = "0.1.0"
description = "A feature-rich tarot reading toolkit with graphical and CLI interfaces."
readme = "README.md"
authors = [{name = "Tarot Teller Maintainers"}]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = []

[project.scripts]
tarotteller = "tarotteller.cli:main"
tarotteller-gui = "tarotteller.gui:launch"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-ra"
